Prevent horizontal scrolling

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -103,6 +103,8 @@
     background-color: black;
     width: 100%;
     height: 100%;
+    /* Prevent horizontal scrolling */
+    touch-action: pan-y;
   }
 }
 
